Correct BEM naming, switch to CSS grid for optional base aligned style

--- a/assets/react-accessible-form.css
+++ b/assets/react-accessible-form.css
@@ -1,17 +1,12 @@
-.form__group--aligned {
-    display: table-row;
+.form--aligned {
+    display: grid;
+    grid-template-columns: max-content auto;
 }
-.form__group__section {
-    display: table-cell;
-    vertical-align: top;
+.form--aligned .form__group {
+    display: contents;
 }
-
 .form__label,
 .form__control,
 .form__text {
     display: block;
-}
-
-.form--aligned {
-    display: table;
 }
